Added build file + support for arm architecture

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,9 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-FROM alpine:3.9
+ARG IMAGE
+ARG IMAGE_TAG
+FROM ${IMAGE}:${IMAGE_TAG}
 
 ENV SPIDER_INSTALL_DIR=${SPIDER_INSTALL_DIR:-/spider}
 ENV SPIDER_USERNAME=${SPIDER_USERNAME:-sysop} SPIDER_UID=${SPIDER_UID:-1000}
