Update build code

--- a/dxspider/Dockerfile
+++ b/dxspider/Dockerfile
@@ -12,36 +12,34 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-ARG IMAGE
-ARG IMAGE_TAG
-FROM ${IMAGE}:${IMAGE_TAG}
+ARG SPIDER_GIT_REPOSITORY="git://scm.dxcluster.org/scm/spider"
+ARG SPIDER_VERSION="HEAD"
+
+FROM alpine:latest
 
 ENV SPIDER_INSTALL_DIR=${SPIDER_INSTALL_DIR:-/spider}
 ENV SPIDER_USERNAME=${SPIDER_USERNAME:-sysop} SPIDER_UID=${SPIDER_UID:-1000}
 
 COPY entrypoint.sh /entrypoint.sh
 
-RUN export SPIDER_GIT_REPOSITORY=${SPIDER_GIT_REPOSITORY:-git://scm.dxcluster.org/scm/spider} && \
-    export SPIDER_VERSION=${SPIDER_VERSION:-HEAD} && \
-    apk update && \
-    apk add gcc git make \
+RUN apk update
+RUN apk add gcc git make \
     musl-dev ncurses-libs ncurses-dev \
     perl-db_file perl-dev perl-digest-sha1 perl-io-socket-ssl perl-net-telnet perl-timedate perl-yaml-libyaml \
-    perl-test-simple perl-app-cpanminus && \
-    cpanm --no-wget Curses && \
-    adduser -D -u $SPIDER_UID -h ${SPIDER_INSTALL_DIR} $SPIDER_USERNAME && \
-    git config --global --add safe.directory ${SPIDER_INSTALL_DIR} && \
-    git clone $SPIDER_GIT_REPOSITORY ${SPIDER_INSTALL_DIR} &&  \
-    (cd $SPIDER_INSTALL_DIR && git reset --hard $SPIDER_VERSION) && \
-    mkdir -p ${SPIDER_INSTALL_DIR}/local ${SPIDER_INSTALL_DIR}/local_cmd && \
-    find ${SPIDER_INSTALL_DIR}/. -type d -exec chmod 2775 {} \; && \
-    find ${SPIDER_INSTALL_DIR}/. -type f -name '*.pl' -exec chmod 775 {} \; && \
-    (cd ${SPIDER_INSTALL_DIR}/src && make) && \
-    chown -R ${SPIDER_USERNAME}:${SPIDER_USERNAME} ${SPIDER_INSTALL_DIR}/. && \
-    apk del --purge gcc git make \
-    musl-dev ncurses-dev perl-app-cpanminus perl-dev && \
-    rm -rf /var/cache/apk/* && \
-    unset SPIDER_GIT_REPOSITORY SPIDER_VERSION TMPDIR
+    perl-test-simple perl-app-cpanminus
+RUN cpanm --no-wget Curses
+RUN adduser -D -u $SPIDER_UID -h ${SPIDER_INSTALL_DIR} $SPIDER_USERNAME
+RUN git config --global --add safe.directory ${SPIDER_INSTALL_DIR}
+RUN git clone $SPIDER_GIT_REPOSITORY ${SPIDER_INSTALL_DIR}
+RUN cd $SPIDER_INSTALL_DIR && git reset --hard $SPIDER_VERSION
+RUN mkdir -p ${SPIDER_INSTALL_DIR}/local ${SPIDER_INSTALL_DIR}/local_cmd
+RUN find ${SPIDER_INSTALL_DIR}/. -type d -exec chmod 2775 {} \; && \
+    find ${SPIDER_INSTALL_DIR}/. -type f -name '*.pl' -exec chmod 775 {} \;
+RUN cd ${SPIDER_INSTALL_DIR}/src && make
+RUN chown -R ${SPIDER_USERNAME}:${SPIDER_USERNAME} ${SPIDER_INSTALL_DIR}/.
+RUN apk del --purge gcc git make \
+    musl-dev ncurses-dev perl-app-cpanminus perl-dev
+RUN rm -rf /var/cache/apk/*
 
 USER $SPIDER_UID
 ENTRYPOINT ["/bin/sh"]
