--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,7 @@ services:
       context: ./dxspider
       dockerfile: Dockerfile
       args:
-        - IMAGE=alpine
-        - IMAGE_TAG=latest
-        - SPIDER_VERSION=mojo # or of HEAD
+        - SPIDER_VERSION=mojo
     volumes:
       - cluster_data:/spider
     env_file:
