Fix environment variable deref

--- a/dxspider/Dockerfile
+++ b/dxspider/Dockerfile
@@ -30,7 +30,7 @@ RUN apk add gcc git make \
 RUN cpanm --no-wget Curses
 RUN adduser -D -u $SPIDER_UID -h ${SPIDER_INSTALL_DIR} $SPIDER_USERNAME
 RUN git config --global --add safe.directory ${SPIDER_INSTALL_DIR}
-RUN git clone $SPIDER_GIT_REPOSITORY ${SPIDER_INSTALL_DIR}
+RUN git clone ${SPIDER_GIT_REPOSITORY} ${SPIDER_INSTALL_DIR}
 RUN (cd $SPIDER_INSTALL_DIR && git reset --hard $SPIDER_VERSION)
 RUN mkdir -p ${SPIDER_INSTALL_DIR}/local ${SPIDER_INSTALL_DIR}/local_cmd
 RUN find ${SPIDER_INSTALL_DIR}/. -type d -exec chmod 2775 {} \; && \
