Fix volumes... again

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
         - SPIDER_VERSION=mojo
     volumes:
       - cluster_local_data:/spider/local
-      - cluster_local_cmd_data:/spider/local_cmd
+      - cluster_connect_data:/spider/connect
+      - cluster_scripts_data:/spider/scripts
     env_file:
       - prod.env
     ports:
@@ -23,4 +24,5 @@ services:
 
 volumes:
   cluster_local_data:
-  cluster_local_cmd_data:
+  cluster_connect_data:
+  cluster_scripts_data:
