--- a/dxspider/Dockerfile
+++ b/dxspider/Dockerfile
@@ -12,17 +12,15 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-ARG SPIDER_GIT_REPOSITORY="git://scm.dxcluster.org/scm/spider"
-ARG SPIDER_VERSION="origin/master"
-
 FROM alpine:latest
+
+ARG SPIDER_GIT_REPOSITORY=git://scm.dxcluster.org/scm/spider
+# SPIDER_VERSION can be "origin/mojo" or "origin/master"
+ARG SPIDER_VERSION=origin/master
 
 ENV SPIDER_INSTALL_DIR=${SPIDER_INSTALL_DIR:-/spider}
 ENV SPIDER_USERNAME=${SPIDER_USERNAME:-sysop}
 ENV SPIDER_UID=${SPIDER_UID:-1000}
-ENV ENV_SPIDER_GIT_REPOSITORY=$SPIDER_GIT_REPOSITORY
-ENV ENV_SPIDER_VERSION=$SPIDER_VERSION
-# SPIDER_VERSION can be "origin/mojo" or "origin/master"
 
 COPY entrypoint.sh /entrypoint.sh
 
@@ -34,8 +32,8 @@ RUN apk add gcc git make \
 RUN cpanm --no-wget Curses
 RUN adduser -D -u ${SPIDER_UID} -h ${SPIDER_INSTALL_DIR} ${SPIDER_USERNAME}
 RUN git config --global --add safe.directory ${SPIDER_INSTALL_DIR}
-RUN git clone ${ENV_SPIDER_GIT_REPOSITORY} ${SPIDER_INSTALL_DIR}
-RUN (cd ${SPIDER_INSTALL_DIR} && git reset --hard ${ENV_SPIDER_VERSION})
+RUN git clone ${SPIDER_GIT_REPOSITORY} ${SPIDER_INSTALL_DIR}
+RUN (cd ${SPIDER_INSTALL_DIR} && git reset --hard ${SPIDER_VERSION})
 RUN mkdir -p ${SPIDER_INSTALL_DIR}/local ${SPIDER_INSTALL_DIR}/local_cmd
 RUN find ${SPIDER_INSTALL_DIR}/. -type d -exec chmod 2775 {} \; && \
     find ${SPIDER_INSTALL_DIR}/. -type f -name '*.pl' -exec chmod 775 {} \;
