Do not quote the version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       dockerfile: Dockerfile
       args:
         # SPIDER_VERSION can be "origin/mojo" or "origin/master"
-        - SPIDER_VERSION="origin/mojo"
+        - SPIDER_VERSION=origin/mojo
     volumes:
       - cluster_local_cmd_data:/spider/local_cmd
       - cluster_connect_data:/spider/connect
