Add another missing perl module

--- a/dxspider/Dockerfile
+++ b/dxspider/Dockerfile
@@ -29,7 +29,7 @@ RUN apk add gcc git make \
     musl-dev ncurses-libs ncurses-dev \
     perl-db_file perl-dev perl-digest-sha1 perl-io-socket-ssl perl-net-telnet perl-timedate perl-yaml-libyaml \
     perl-test-simple perl-app-cpanminus
-RUN cpanm --no-wget Curses Data::Structure::Util
+RUN cpanm --no-wget Curses Data::Structure::Util Mojo::IOLoop
 RUN adduser -D -u ${SPIDER_UID} -h ${SPIDER_INSTALL_DIR} ${SPIDER_USERNAME}
 RUN git config --global --add safe.directory ${SPIDER_INSTALL_DIR}
 RUN git clone -b ${SPIDER_VERSION} ${SPIDER_GIT_REPOSITORY} ${SPIDER_INSTALL_DIR}
