--- a/prod.sample.env
+++ b/prod.sample.env
@@ -1,10 +1,73 @@
-CLUSTER_CALLSIGN="A1AAA-2"
-CLUSTER_SYSOP_NAME="John Doe"
-CLUSTER_SYSOP_CALLSIGN="W1AAA"
-CLUSTER_LATITUDE=+10.0
-CLUSTER_LONGITUDE=-1.2
-CLUSTER_LOCATOR="IN50AA"
-CLUSTER_QTH="Paris, France"
-CLUSTER_SYSOP_EMAIL="admin@example.com"
-CLUSTER_SYSOP_BBS_ADDRESS="A1AAA@A1AAA-2.1.PARIS.FR"
-CLUSTER_PORT=7300
+
+# Copyright 2023 Rui Oliveira and Brian Stucker
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+#
+#
+#
+# Production environment variables used to configure DX-Spider and the Docker build process.
+
+# SPIDER_BRANCH: The branch of the DX-Spider software to be used. Can be "mojo" or "master" (no quotes, prefer mojo)
+SPIDER_BRANCH=mojo
+
+# $clusterport: The publicly exposed port number of the cluster (default is 27754, please don't change unless you really need to).
+CLUSTER_PORT=27754
+
+####
+#
+# DX-Spider specific configuration. These settings will be populated into the local/DXVars.pm file for the deployment.
+#
+# If upgrading from a non-Docker deployment to Docker, you can find these values in your /spider/local/DXVars.pm file.
+# Some comments below are taken from the DXVars.pm file Copyright (c) 1998-2007 - Dirk Koopman G1TLK.
+# They are provided here for reference and consistent guidance on appropriate DxSpider settings.
+#
+
+# $mycall: The callsign for your DX-Spider cluster (this really does need to change for your system!!! use CAPITAL LETTERS)
+CLUSTER_CALLSIGN=A1AAA-2
+
+# $myname: The name you give to strangers who don't know what a callsign is
+CLUSTER_SYSOP_NAME=Jane Doe
+
+# $myalias: Your "normal" callsign (in CAPITAL LETTERS)
+CLUSTER_SYSOP_CALLSIGN=W1AAA
+
+# $mylatitude: Your latitude (+)ve = North, (-)ve = South in degrees and decimal degrees
+CLUSTER_LATITUDE=-75.05
+
+# $mylongitude: Your longitude (+)ve = East, (-)ve = West in degrees and decimal degrees
+CLUSTER_LONGITUDE=+123.19
+
+# $mylocator: Your locator (USE CAPITAL LETTERS)
+CLUSTER_LOCATOR=PB15MA
+
+# $myqth: Your QTH (roughly)
+CLUSTER_QTH=Concordia Station, Antarctica
+
+# $myemail: Your e-mail address (please use an email address you'll actually check). Be sure to write "@" as "\@"
+CLUSTER_SYSOP_EMAIL=me\@example.com
+
+# $mybbsaddr: Your BBS address
+CLUSTER_SYSOP_BBS_ADDRESS=W1AAA\@W1AAA.#35.ANT.AN
+
+# $lang: The default language for your node (the key used must match the one in the Messages file)
+CLUSTER_LANG=en
+
+# $yes: Your favorite way to say 'Yes'
+CLUSTER_YES=Yes
+
+# $no: Your favorite way to say 'No'
+CLUSTER_NO=No
+
+# $user_interval: The interval between unsolicited prompts if not traffic
+CLUSTER_USER_INTERVAL=11*60
