Updating docker-compose.yml structure so that only data files are stored in the local mount point. This will keep people from trying to run spider commands in the wrong context, and allow the source files of the spider software to be updated correctly when the container is rebuilt.

--- a/build
+++ b/build
@@ -77,8 +77,8 @@ uid=`id -u sysop`
 gid=`getent group spider | awk -F':' '{ print $3 }'`
 
 if [ ! -d './spider' ]; then
-  echo "Creating mount point"
-  mkdir -m2755 -p spider
+  echo "Creating mount points"
+  mkdir -m2755 -p spider spider/connect spider/data spider/local spider/local_cmd spider/local_data spider/tmp
 fi
 
 chmod 2755 ./spider
