Added scripts directory to list of mounted volumes, and replaced BusyBox wget command with the real thing so wget -qN works correctly now.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -52,7 +52,8 @@ RUN apk add \
     perl-mojolicious \
     perl-net-telnet \
     perl-timedate \
-    perl-yaml-libyaml
+    perl-yaml-libyaml \
+    wget
 
 RUN cpanm --no-wget Data::Structure::Util Net::CIDR::Lite EV Math::Round && \
     apk del --purge \
