--- a/build
+++ b/build
@@ -78,7 +78,7 @@ gid=`getent group spider | awk -F':' '{ print $3 }'`
 
 if [ ! -d './spider' ]; then
   echo "Creating mount points"
-  mkdir -m2755 -p spider spider/connect spider/data spider/local spider/local_cmd spider/local_data spider/tmp
+  mkdir -m2755 -p spider spider/connect spider/data spider/local spider/local_cmd spider/local_data spider/tmp spider/scripts
 fi
 
 chmod 2755 ./spider
